[fix] app responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -29,5 +29,12 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <footer>
+      <div class="attribution">
+        Challenge by <a href="http://devchallenges.io" target="_blank">Devchallenges.io</a>. 
+        Coded by <a href="#">Adeleke Sherifah</a>.
+      </div>
+    </footer>
   </body>
 </html>
